// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FoldSwitch /> should refold and rerender text when isFolded set to true 1`] = `
<styled.div
  onClick={[Function]}
>
  <AnimateHeight
    animateOpacity={true}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={200}
    easing="ease"
    height="auto"
    style={Object {}}
  >
    <styled.p>
      Test text
    </styled.p>
  </AnimateHeight>
  <styled.div
    isFolded={true}
  >
    <ExpandMoreIcon
      fill="#123456"
      size={40}
    />
  </styled.div>
</styled.div>
`;

exports[`<FoldSwitch /> should render correctly folded with options 1`] = `
<styled.div
  onClick={[Function]}
>
  <AnimateHeight
    animateOpacity={true}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={200}
    easing="ease"
    height="auto"
    style={Object {}}
  >
    <styled.p>
      Test text
    </styled.p>
  </AnimateHeight>
  <styled.div
    isFolded={true}
  >
    <ExpandMoreIcon
      fill="#123456"
      size={40}
    />
  </styled.div>
</styled.div>
`;

exports[`<FoldSwitch /> should render correctly with no options 1`] = `
<styled.div
  onClick={[Function]}
>
  <styled.div
    isFolded={false}
  >
    <ExpandMoreIcon
      fill="rgba(162, 198, 248, 1)"
      size={40}
    />
  </styled.div>
</styled.div>
`;

exports[`<FoldSwitch /> should unfold and unrender text when isFolded set to false 1`] = `
<styled.div
  onClick={[Function]}
>
  <AnimateHeight
    animateOpacity={true}
    animationStateClasses={
      Object {
        "animating": "rah-animating",
        "animatingDown": "rah-animating--down",
        "animatingToHeightAuto": "rah-animating--to-height-auto",
        "animatingToHeightSpecific": "rah-animating--to-height-specific",
        "animatingToHeightZero": "rah-animating--to-height-zero",
        "animatingUp": "rah-animating--up",
        "static": "rah-static",
        "staticHeightAuto": "rah-static--height-auto",
        "staticHeightSpecific": "rah-static--height-specific",
        "staticHeightZero": "rah-static--height-zero",
      }
    }
    applyInlineTransitions={true}
    delay={0}
    duration={200}
    easing="ease"
    height={0}
    style={Object {}}
  >
    <styled.p>
      Test text
    </styled.p>
  </AnimateHeight>
  <styled.div
    isFolded={false}
  >
    <ExpandMoreIcon
      fill="#123456"
      size={40}
    />
  </styled.div>
</styled.div>
`;
